--- a/Projecten/Mijn eigen website/nieuw ontwerp 2.0/index.html
+++ b/Projecten/Mijn eigen website/nieuw ontwerp 2.0/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="geheel">
         <header><h1>Exploring CS</h1></header>
-        <nav><a>Home</a><a>Blog</a><a>About</a></nav>
+        <nav><a href="index.html">Home</a><a href="blog.html">Blog</a><a href="about.html">About</a></nav>
         <main>
             <h4>Home</h4>
             <p>Welcome to my recently improved website. The main functionality I want it to have is a blog function. That sort of automatically orders it as well based on date etc, the sort of basic functionality you would expect it to have.
