website update again, and a small notes section

--- a/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/about.html
+++ b/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/about.html
@@ -4,14 +4,20 @@
     <title>My personal site 2.0</title>
     <meta charset="UTF-8">
 
-    <link href="styles/style.css" rel="stylesheet" type="text/css">
+    <link href="styles/about-style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <div id="geheel">
         <header><h1>Exploring CS</h1></header>
         <nav><a href="index.html">Home</a><a href="blog.html">Blog</a><a href="about.html">About</a></nav>
         <main>
-            <h4>About</h4>
+            <article>
+                <h4>About</h4>
+                
+            </article>
+            <section>
+                <h4>Blog nav</h4>
+            </section>
         </main>
         <footer>Footer</footer>
     </div>
