--- a/Projecten/Mijn eigen website/nieuw ontwerp/blog.html
+++ b/Projecten/Mijn eigen website/nieuw ontwerp/blog.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My personal site</title>
-    <link rel="shortcut icon" href="afbeeldingen/favicon.ico">
+    <title>My personal site 2.0</title>
     <meta charset="UTF-8">
 
-    <link href="styles/blog.css" rel="stylesheet" type="text/css">
+    <link href="styles/blog-style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
-        <h1>Exploring CS</h1>
-        <!-- <p>... and some other stuff.</p> -->
-    </header>
-    <div id="positieDiv">
+    <div id="geheel">
+        <header><h1>Exploring CS</h1></header>
         <nav><a href="index.html">Home</a><a href="blog.html">Blog</a><a href="about.html">About</a></nav>
         <main>
             <h4>Blog</h4>
-            
+            <p>Maybe I can keep it short, I am only satisfied once there is an automatic system in here that sort of orders new blog entries in a history overview (for example by month and then individual days etc). It has to sort of be automated already so I can move on, and start focussing on the content. And get this blog going!
+            </p>
+            <br>
+            <p>Because it's going to be the main feature. It more or less is.</p>
+            <br>
+            <p>More to come.</p>
         </main>
+        <footer>Footer</footer>
     </div>
-    <footer><p>label footer</p></footer>
-
     <script src="javascript/myscript.js"></script>
 </body>
 </html>
