website getting more complete, last phases

--- a/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/about.html
+++ b/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/about.html
@@ -13,10 +13,37 @@
         <main>
             <article>
                 <h4>About</h4>
-                
+                <p>Hello, it's 6-4-2021 today, a tuesday, and it's 21:45 in my timezone (UTC+1, so Amsterdam is a good reference). I have some spare time left, and I thought maybe it's nice to share something of myself. I'm Niels and I'm 31 years old. I'm trying to teach myself programming. It's just an interest that I have that was sparked by a small course I followed some years ago. Sat idle for a while but picked it up again once I got a place for my own.</p>
+                <br>
+                <p>I have switched languages a couple of times after that. C++ and Python, notably. But now I'm at web and I feel like it's a keeper. However I'm also interested in the more theoretical part and I have bought some books about that as well.</p>
+                <br>
+                <p>Basically I'm documenting the journey so that through that I can make sure I'm still progressing at a steady rate. It's my way of measuring it somewhat.</p>
+                <br>
+                <p>So far it looks like I'm heading the direction of going self-taught. However I am still considering going back to school for this. But until then I'm still making progress. Our educational system is a lot more accessible than in the US, most likely. Which is why it is more of a requirement here. There isn't that much experience in my area with self-taught developers, at least probably not as much as in the US. So if I am going to stick to self-taught it's going to be a bit more of a challenge, probably. There is a possibility of doing something else though that could be considered some sort of bootcamp. Definitely worth considering. But I have an interest in it anyway, regardless of whether I turn it into a profession or not.</p>
+                <br>
+                <p>And I have a small rubber duck on my desk. Well that's about it... thanks for reading and I will see you next time!</p>
             </article>
             <section>
-                <h4>Blog nav</h4>
+                <h4>Article Select</h4>
+                <div id="year">
+                    <button id="less"><</button><p>2021</p><button id="more">></button>
+                </div>
+                <div id="month">
+                    <select>
+                        <option value="Januari">Januari</option>
+                        <option value="Februari">Februari</option>
+                        <option value="March">March</option>
+                        <option value="April">April</option>
+                        <option value="May">May</option>
+                        <option value="June">June</option>
+                        <option value="Juli">Juli</option>
+                        <option value="August">August</option>
+                        <option value="September">September</option>
+                        <option value="October">October</option>
+                        <option value="November">November</option>
+                        <option value="December">December</option>
+                    </select>
+                </div>
             </section>
         </main>
         <footer>Footer</footer>
