--- a/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/blog.html
+++ b/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/blog.html
@@ -19,9 +19,36 @@
                 <p>Because it's going to be the main feature. It more or less is.</p>
                 <br>
                 <p>More to come.</p>
+                <br>
+                <p>-</p>
+                <br>
+                <p>It's beginning to look good, if you have noticed here -></p>
+                <br>
+                <p>What rests is the technical part you could say. It's the finishing touch. The actual "workings", it could be really simple. But it might be the most fun part as well.</p>
+                <br>
+                <p>Time to get it sorted.</p>
             </article>
             <section>
-                <h4>Blog nav</h4>
+                <h4>Article Select</h4>
+                <div id="year">
+                    <button id="less"><</button><p>2021</p><button id="more">></button>
+                </div>
+                <div id="month">
+                    <select>
+                        <option value="Januari">Januari</option>
+                        <option value="Februari">Februari</option>
+                        <option value="March">March</option>
+                        <option value="April">April</option>
+                        <option value="May">May</option>
+                        <option value="June">June</option>
+                        <option value="Juli">Juli</option>
+                        <option value="August">August</option>
+                        <option value="September">September</option>
+                        <option value="October">October</option>
+                        <option value="November">November</option>
+                        <option value="December">December</option>
+                    </select>
+                </div>
             </section>
         </main>
         <footer>Footer</footer>
