small spelling mistake

--- a/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/index.html
+++ b/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/index.html
@@ -19,7 +19,7 @@
                 <p>I've titled the website "Exploring CS", but it's probably not going to be limited to that. I have more interests that I could list here, all kind of expanding on the main subject. Obviously Mathematics is related to Computer Science in general, I have a fascination with the subject Math. And CS was kind of initiated through an initial interest in the not so completely legal subject of hacking, but I don't have bad intentions that much at all. It just makes it a little more interesting that you maybe cóuld do something exciting with it perhaps!
                 </p>
                 <br>
-                <p>But I've even taken up drawing for a moment as while, and am very much interested in Pixel Art and everything associated with it. Yeah, I could still talk about all kinds of things. But I expect the main thing to be Computer Science, we'll see to what extent that will stick to that.
+                <p>But I've even taken up drawing for a moment as well, and am very much interested in Pixel Art and everything associated with it. Yeah, I could still talk about all kinds of things. But I expect the main thing to be Computer Science, we'll see to what extent that will stick to that.
                 </p>
             </article>
             <section>
