--- a/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/blog.html
+++ b/Projecten/Mijn eigen website/nieuw ontwerp 2.0 (concept)/blog.html
@@ -22,11 +22,13 @@
                 <br>
                 <p>-</p>
                 <br>
-                <p>It's beginning to look good, if you have noticed here -></p>
+                <p>Okay so, it's getting a little more serious than I expected. I need to resort to using a database for this. I've already been able to work with one, in a very basic way. But it did what it was supposed to do. And it probably isn't going to be that more difficult with this website either.</p>
                 <br>
-                <p>What rests is the technical part you could say. It's the finishing touch. The actual "workings", it could be really simple. But it might be the most fun part as well.</p>
+                <p>But it does make me question myself on... how serious do I want this to get? And from now on especially, now that I know it's going to get serious anyway?</p>
                 <br>
-                <p>Time to get it sorted.</p>
+                <p>Those are the questions that I have in mind.</p>
+                <br>
+                <p>I'll keep this updated of course.</p>
             </article>
             <section>
                 <h4>Article Select</h4>
@@ -48,6 +50,12 @@
                         <option value="November">November</option>
                         <option value="December">December</option>
                     </select>
+                </div>
+                <div id="displayList">
+                    <a>link 1</a>
+                    <a>link 2</a>
+                    <a>link 3</a>
+                    <a>link 4</a>
                 </div>
             </section>
         </main>
