--- a/Odin Aantekeningen/test.html
+++ b/Odin Aantekeningen/test.html
@@ -2,8 +2,10 @@ test
 
 123
 
-hahaha
-hahaha
-haha 
+ohhh nooooo
 
-haha
+NOOOOOOOOOOOOOOOOOO
+
+Don't speak! I know what you're saying, I don't need your reasons. Don't tell me cause it hurts!!!
+
+Don't speak.
