aantekeningen, blanco html edit for further LF CRLF test

--- a/Odin Aantekeningen/blanco.html
+++ b/Odin Aantekeningen/blanco.html
@@ -18,4 +18,7 @@
 
         calc1();
     </script>
+
+    <h1>Is hier nog meer aan de hand?</h1>
+    <p>Of misschien pas in "zo'n" gedeelte (voorbeeld)?</p>
 </body>
